name:                racing
version:             0.1.0.0        
license:             BSD3
license-file:        LICENSE
author:              Andres Radunsky
maintainer:          andres.radunsky@gmail.com
category:            Game
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

executable racing
  hs-source-dirs:      src
  other-modules:       Racing
                     , UI     
  main-is:             Main.hs  
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick        >= 0.17.2 && < 0.18
                     , containers   >= 0.5.7.1 && < 0.5.8
                     , linear       >= 1.20.6 && < 1.21
                     , microlens    >= 0.4.8.0 && < 0.4.9
                     , microlens-th >= 0.4.1.1 && < 0.4.2
                     , random       >= 1.1 && < 2
                     , vty          <= 5.15.1 && > 5.1  